[gd_scene load_steps=8 format=2]

[ext_resource path="res://Source/Character/Enemy/EnemyShip.tscn" type="PackedScene" id=1]
[ext_resource path="res://Source/Character/Player/PlayerShip.tscn" type="PackedScene" id=2]
[ext_resource path="res://Source/World/background.png" type="Texture" id=3]
[ext_resource path="res://Source/World/Main.gd" type="Script" id=4]
[ext_resource path="res://Source/UI/Menu/User Interface.tscn" type="PackedScene" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1368, 0, 0, 0, 0, 0, 1368, 768, 0, 0, 0, 0, 0, 768, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1368, 0 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2732, 1536 )

[node name="Main" type="Node"]
script = ExtResource( 4 )
enemy_ship = ExtResource( 1 )

[node name="Background" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2( 2048, 768 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxLayer"]
position = Vector2( 683, 384 )
texture = ExtResource( 3 )

[node name="UserInterface" type="CanvasLayer" parent="."]
layer = 100

[node name="User Interface" parent="UserInterface" instance=ExtResource( 5 )]

[node name="PlayerShip" parent="." instance=ExtResource( 2 )]
position = Vector2( 683, 384 )

[node name="Enemy" type="Node2D" parent="."]

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="EnemySpawnPath2D" type="Path2D" parent="."]
position = Vector2( -341.5, -192 )
scale = Vector2( 1.5, 1.5 )
curve = SubResource( 1 )

[node name="EnemySpawnPathFollow2D" type="PathFollow2D" parent="EnemySpawnPath2D"]
position = Vector2( 1368, 0 )
rotation = 1.5708

[node name="EnemyDespawn" type="Area2D" parent="."]
position = Vector2( 683, 384 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDespawn"]
shape = SubResource( 2 )
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="body_exited" from="EnemyDespawn" to="." method="_on_EnemyDespawn_body_exited"]
